actualizada logica de tipos y catalog. Prueba de inserción de productos